# DualBootKernelPatcher

./: .gitignore  CMakeLists.txt  DualBoot.Sm8150.cfg  LICENSE  README.md  patcher.c  patcher.h  remover.c  utils.c  utils.h
.github/workflows/: cmake-multi-platform.yml
Config/: DualBoot.Sm8150.cfg  DualBoot.Sm8550.cfg
ShellCode/: CMakeLists.txt  CommonTail.S  DummyHead.S  ShellCode.AYAPS.S  ShellCode.Andromeda.S  ShellCode.Cepheus.S  ShellCode.Epsilon.S  ShellCode.Hotdog.S  ShellCode.Nabu.S
